--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My First Github Repo</title>
 </head>
 <body>
+    <h2>Hello World</h2>
+    <p>This is a paragraph</p>
     
 </body>
 </html>
