Explore some new html tag-bdo,abbr,label,meter,progress,details

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <body>
     <h2>Hello World</h2>
     <p>This is a paragraph</p>
+    <h1><bdo dir="rtl">Bangladesh</bdo></h1>
+
+    <h1>5 <sup>2</sup> + 2 = 27 </h1>
+
+    <h2><abbr title="Bangladesh">Country</abbr></h2>
     
+    <label for="disk">Progress bar</label>
+    <meter id="disk" value="0.7"></meter>
+    <Progress id="disk" ></Progress>
+    <Progress id="disk" value=".5"></Progress>
+    <details>
+        <summary>Address</summary>
+        <p>Saheb Bazar,Rajshahi
+        </p>
+    </details>
 </body>
 </html>
